add footer section

--- a/style.css
+++ b/style.css
@@ -39,13 +39,14 @@ header button {
   height: 30px;
   line-height: 30px;
   cursor: pointer;
+  transition: .3s linear;
 }
 
 button i{
   margin-right: 5px;
 }
 
-button:hover{
+header button:hover{
   background-color: black;
   color: white;
 }
@@ -63,7 +64,9 @@ main h2{
   font-size: 5rem;
   padding:5px;
 }
-
+.chooseHand i{
+  transition: .3s linear;
+}
 .chooseHand i:hover{
   color: blueviolet;
   text-shadow: 0 0 30px black;
@@ -126,7 +129,17 @@ color: blueviolet;
   justify-content: space-between;
 }
 
+footer {
+  margin-top: 15px;
+  text-align: center;
+  background-color: blueviolet;
+  
+}
 
+footer p{
+  color: white;
+  padding: 5px;
+}
 @media (min-width: 768px){
   html {
     font-size: 170%;
