--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 .container {
   /* background-color: aquamarine; */
-  min-height: 100vh;
+  /* min-height: 100vh; */
   width: 100%;
   transition: .3s;
 }
