--- a/style.css
+++ b/style.css
@@ -89,14 +89,16 @@ main{
 .hands-container i:hover{
   background-color: rgb(227, 238, 124);
 }
-
+.hands-container .active{
+  background-color: rgb(227, 238, 124);
+}
 .play button
 {
   text-transform: uppercase;
   padding: 10px 20px;
   border: 2px solid black;
   border-radius: 30px;
-  background-color: rgb(227, 238, 124);
+  background-color: rgb(233, 241, 154);
   /* color: rgb(74, 136, 74); */
   font-size: 2rem;
   cursor: pointer;
@@ -106,13 +108,13 @@ main{
 }
 
 .play button:hover{
-  background-color: rgb(223, 181, 65);
+  background-color: rgb(224, 236, 112);
  color: black;
 }
 .choosed-option{
   /* background-color: rgb(211, 156, 156); */
   padding: 20px;
-  width: 70%;
+  width: 80%;
   margin: 0 auto;
 }
 .box {
@@ -126,7 +128,16 @@ main{
   margin: 5px 0;
 }
 .box span {
-  background-color: rgb(245, 225, 169); 
+  /* background-color: rgb(245, 225, 169);  */
+}
+.winner{
+  /* background-color: red; */
+  padding: 10px 0;
+}
+.winner h1 {
+  font-size: 2.5rem;
+  color: rgb(67, 167, 167);
+  text-transform: uppercase;
 }
 .statistic {
   /* background-color: red; */
@@ -149,7 +160,6 @@ footer {
   background-color: rgb(145, 211, 211);
   border-top: 2px solid black;
   /* background-color: blueviolet; */
-  
 }
 
 footer p{
@@ -160,6 +170,12 @@ footer p a{
   color: black;
   text-decoration: none;
   font-size: 1.5rem;
+  font-weight: 700;
+  transition: .3s linear;
+}
+footer p a:hover{
+  color: rgb(78, 79, 80);
+  /* font-weight: 700; */
 }
 .rules {
   position: absolute;
@@ -168,7 +184,7 @@ footer p a{
   transform: translate(-50%, -50%);
   width: 90vw;
   height: 90vh;
-  background-color: rgb(187, 185, 185);
+  background-color: rgb(211, 209, 209);
   z-index: 2;
   /* border-top: 10vh solid black; */
   /* border-bottom: 10vh solid black; */
@@ -180,8 +196,8 @@ footer p a{
   }
   .rules h2{
     padding: 10px;
-    background-color:  rgb(64, 133, 55);
-    color: white;
+    background-color:  rgb(145, 211, 211);
+    color: black;
     text-transform: uppercase;
   }
   .rules>p{
@@ -219,4 +235,38 @@ footer p a{
     transform: translate(-50%, -50%) scale(1);
   }
 
+@media (min-width: 480px){
+  .choosed-option,
+  .statistic{
+    width: 60%;
+  }
+}
 
+@media (min-width: 768px){
+  .choosed-option,
+  .statistic{
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px){
+  html{
+    font-size: 75%;
+  }
+  .hands-container i{
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+  }
+  .choosed-option,
+  .statistic{
+    width: 40%;
+  }
+}
+
+@media (min-width: 1300px){
+  .choosed-option,
+  .statistic{
+    width: 40%;
+  }
+}
